manifest.yaml
# Version of Kubernetes API we are using
apiVersion: apps/v1
# This can be a statefulset, or a deployment, a deployment doesn't need a hard drive that sticks around
kind: Deployment
metadata:
  # This is the name of my deployment
  name: perkley-cit270
spec:
  replicas: 1
  selector:
    matchLabels:
      app: perkley-cit270
  template:
    metadata:
      labels:
        app: perkley-cit270
    spec:
      containers:
        - name: perkley-cit270
        # This is the Dockerhub url to my image
          image: perkley/cit270
          # This is the command to run once the container starts
          command: ["npm"]
          # These are the arguments to pass to the command when the container starts 
          args: ["run", "start"]
          # This is the port omy container is listening on, ex: 443
          ports:
            - containerPort: 3000
          resources:
            limits:
            # This is the max CPU (in cores) my container can use
              cpu: ".125"
              # This is the max memory (in Megabytes or Millibytes)
              memory: "500Mi"
            requests:
              # This is the minimum CPU (in cores) my container can use
              cpu: ".1"
              # This is the minmum memory
              memory: "250Mi"
          livenessProbe:
            httpGet:
              # The Url to call to see if my API is running
              path: /
              # This is the port to use to see if my API is running
              port: 443
            initialDelaySeconds: 3
            periodSeconds: 3
          ReadinessProbe:
            httpGet:
            # This is the url to call to see if my API has started
              path: /
              # This is the port to use to see if my API has started
              port: 443
            initialDelaySeconds: 3
            periodSeconds: 3
