ingress.yaml
# Ingress
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: douglas-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-cluster-issuer"
spec:
  tls:
  - hosts:
    - douglas-loadbalancer.cit270.com
    secretName: douglas-tls
  rules:
  - host: douglas-loadbalancer.cit270.com
    http:
      paths:
      - backend:
        serviceName: perkley-cit270-loadbalancer
        servicePort: 80
